--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "builds": [{ "src": "api/index.js", "use": "@vercel/node" }],
   "routes": [
-    { "src": "^/bfhl$", "dest": "/api/index.js" }
+    { "src": "^/bfhl$", "dest": "/api/index.js" },
+    { "src": "^/$", "dest": "/api/index.js" }
   ]
 }
